# financial-converter

./: .gitignore  .pre-commit-config.yaml  README.md  add_currency_rates.py  main.py  net_worth_chart.py  pyproject.toml
.agents/skills/: typer
.agents/skills/library-skills/: .library-skills.json
configs/: expenses.json  income.json  transfers.json
