[project]
name = "money-manager-to-firefly-iii-converter"
version = "0.1.0"
description = "Converter from Money Manager Android app export to Firefly III format"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl==3.1.5",
    "pydantic-extra-types[pycountry]==2.11.1",
    "pydantic==2.13.3",
]

[dependency-groups]
build = ["uv==0.11.10"]
dev = [
    "black==26.3.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==1.20.2",
    "pep8-naming==0.15.1",
    "prek==0.3.12",
    "types-openpyxl==3.1.5.20260408",
]
