[project]
name = "money-manager-to-firefly-iii-converter"
version = "0.1.0"
description = "Converter from Money Manager Android app export to Firefly III format"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx==0.28.1",
    "openpyxl==3.1.5",
    "pydantic-extra-types[pycountry]==2.11.1",
    "pydantic==2.13.4",
    "typer==0.25.1",
]

[dependency-groups]
build = ["uv==0.11.11"]
dev = [
    "black==26.3.1",
    "flake8-bugbear==25.11.29",
    "Flake8-pyproject==1.2.4",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==1.20.2",
    "pep8-naming==0.15.1",
    "prek==0.3.13",
    "types-openpyxl==3.1.5.20260408",
]

[tool.uv]
exclude-newer = "1 week"

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]

[tool.isort]
profile = "black"
