[project]
name = "money-manager-to-firefly-iii-converter"
version = "0.1.0"
description = "Converter from Money Manager Android app export to Firefly III format"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx2==2.5.0",
    "openpyxl==3.1.5",
    "pandas-stubs==3.0.3.260530",
    "pandas==3.0.3",
    "pydantic-extra-types[pycountry]==2.11.1",
    "pydantic-settings==2.14.2",
    "pydantic==2.13.4",
    "streamlit==1.58.0",
    "typer==0.26.8",
]

[dependency-groups]
build = ["uv==0.11.26"]
dev = [
    "black==26.5.1",
    "flake8-bugbear==25.11.29",
    "Flake8-pyproject==1.2.4",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==2.1.0",
    "pep8-naming==0.15.1",
    "prek==0.4.5",
    "types-openpyxl==3.1.5.20260518",
]

[tool.uv]
exclude-newer = "1 week"

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ['pydantic.mypy']
